created the layout for the character creation form using CSS Grids. CSS Grids is more confusing than JavaScript

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,24 @@
 {
     "cSpell.words": [
+        "anhandle",
+        "character",
+        "container",
+        "curhp",
         "draggables",
         "dragonborn",
         "dropzone",
+        "hitdice",
+        "maxhp",
+        "pasper",
+        "prof",
+        "savecha",
+        "savecon",
+        "savedex",
+        "saveint",
+        "savestr",
+        "savethrow",
+        "savewis",
+        "sheet",
         "sortlist",
         "tiefling"
     ]
